fix spacing between about links

--- a/app/assets/stylesheets/about/about.scss
+++ b/app/assets/stylesheets/about/about.scss
@@ -10,7 +10,7 @@
 }
 
 .linked-in-link > img{
-    margin-right: 0.5rem;
+    margin-right: 10px;
     border-radius: 3px;
 }
 
